# LUNA

./: CONVERSATION_SUMMARY.md  Cargo.toml  Cargo_refactored.toml  GET_LUNA_EXE.md  HOW_TO_BUILD_LUNA_EXE.md  LICENSE  LUNA_BUILD_DEPLOYMENT_GUIDE.md  LUNA_COMPLETE_ECOSYSTEM_FINAL.md  LUNA_COMPLETE_USER_EXPERIENCE.md  LUNA_FINAL_IMPLEMENTATION_SUMMARY.md  LUNA_IMPLEMENTATION_COMPLETE.md  LUNA_MANUAL_PR_CREATION_COMPLETE_GUIDE.md  LUNA_PROJECT_PULL_REQUEST_SUMMARY.md  LUNA_PROJECT_STATUS_AND_RECOMMENDATIONS.md  LUNA_PR_DEBUG_ANALYSIS_COMPLETE.md  LUNA_PULL_REQUEST_MANUAL_CREATION_GUIDE.md  LUNA_REAL_VM_IMPLEMENTATION_COMPLETE.md  LUNA_USER_INTERFACE_GUIDE.md  PR_TROUBLESHOOTING_GUIDE.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  SMART_INSTALLER.md  TECHNICAL_AUDIT_IMPLEMENTATION.md  build.rs  project_architecture.md  setup-luna-vm-dev.sh
.github/scripts/: setup-signing.ps1
.github/workflows/: build-release.yml  ci.yml  device-safety-tests.yml  manual-build.yml  os-regression-matrix.yml  performance-tests.yml  privilege-separation-tests.yml  windows-build.yml
accessibility-tests/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
accessibility-tests/tests/: accessibility-overlay.spec.ts
autonomous-agent/: CONTAINERS_VS_VMS.md  CONTRIBUTING.md  DOCUMENTATION.md  FEATURE_RECOMMENDATIONS.md  FEMALE_AI_NAMES.md  IMPLEMENTATION_ASSESSMENT.md  LUNA_BRAND_GUIDELINES.md  LUNA_IMPLEMENTATION.md  LUNA_ONE_CLICK_DESIGN.md  LUNA_SEAMLESS_DESIGN.md  LUNA_VM_DEVELOPMENT.md  NAMING_DEEP_DIVE.md  PROJECT_SUMMARY.md  PULL_REQUEST_SUMMARY.md  REBRANDING_STRATEGY.md  SEAMLESS_VM_AGENT.md  WARMWIND_ANALYSIS.md  containers-vs-vms-visual.html  index.html  jest.config.js  jest.setup.js  package.json  test-server.js  wake-luna
autonomous-agent/brand-assets/: BRAND_ASSETS_GUIDE.md
autonomous-agent/luna-one-click/: IMPLEMENTATION_PLAN.md  build-one-click-luna.sh  demo-user-experience.sh  luna-app.ts  seamless-vm-manager.ts
autonomous-agent/luna-one-click/native-app/: package.json
autonomous-agent/luna-one-click/ui/: splash.html  ui-manager.ts
autonomous-agent/luna-one-click/vm-engine/: vm-engine.ts
autonomous-agent/luna-vm-dev/: QUICKSTART.md  README.md  start-luna-development.sh  test-concept.sh
autonomous-agent/luna-vm-dev/scripts/: create-vm.sh  package-vm.sh  setup-luna-env.sh
autonomous-agent/poc-vm-app/: DEMO.sh  README.md  luna-launcher.sh
autonomous-agent/poc-vm-app/config/: vm-config.json
autonomous-agent/poc-vm-app/native-app/: app.html
autonomous-agent/poc-vm-app/vm-manager/: start-vm.sh
autonomous-agent/src/: App.tsx
autonomous-agent/src/components/: AccessibilityOverlay.tsx  ActivityFeed.tsx  AgentControl.tsx  ConfigPanel.tsx  MetricsChart.tsx  ScreenCapture.tsx  SocialMedia.tsx  SystemMonitor.tsx  TaskManager.tsx  WindowInstaller.tsx
autonomous-agent/src/examples/: AccessibilityIntegration.tsx  SecureCredentialUsage.ts  TelemetryIntegration.ts  migration-script.ts
autonomous-agent/src/server/: index.ts
autonomous-agent/src/services/: AccessibilityService.ts  AutoUpdateService.ts  CrashReporter.ts  CredentialMigration.ts  PerformanceMonitor.ts  PrivilegeBrokerClient.ts  SecureCredentialStorage.ts  TelemetryService.ts
docs/: API.md  ARCHITECTURE.md  MIGRATION.md  PERFORMANCE.md
examples/: basic_usage.rs
installer/: build_installer.ps1  luna_installer.wxs
installer/bootstrap/: luna_bootstrap.cpp
luna-agent-implementation/deployment/github-actions/: ci-cd-pipeline.yml
luna-agent-implementation/deployment/terraform/: main.tf
luna-agent-implementation/luna-vm-real/: Dockerfile  docker-compose.yml  luna_demo.py
luna-agent-implementation/luna-vm-real/luna-agent/: requirements.txt
luna-agent-implementation/testing/: package.json
luna-agent/scripts/: dev-start.sh  optimize-vm.sh
luna-agent/src/: main.ts
luna-installer-windows/: package.json
luna-installer-windows/assets/: luna-icon.png.placeholder
luna-installer-windows/src/: index.html  main.js  renderer.js
luna-project/: deploy-luna.sh
luna-project/luna-vm-real/: build-luna-vm.sh  demo-luna-capabilities.sh
luna-project/testing/: README.md
luna-project/vm-assets/: vm-config.json
luna-testing-demo/: .env.production  Dockerfile  INTEGRATION_SUCCESS_REPORT.md  LAUNCH_READY_REPORT.md  MANUAL_PR_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  USER_TESTING_PROGRAM.md  admin-dashboard.html  deploy-production.txt  docker-compose.yml  healthcheck.js  package-lock.json  package.json  participant-routes.js  recruitment-landing.html  server.js  test-session.js
luna-testing-demo/database/: init.sql.txt
luna-testing-demo/k8s/: luna-deployment.yaml
luna-testing-demo/monitoring/: prometheus.yml
luna-testing-demo/nginx/: nginx.conf
luna-testing-infrastructure/: LUNA_TESTING_INFRASTRUCTURE_COMPLETE.md  README.md  package.json  start-luna-testing.sh  test-infrastructure.js
performance-tests/: k6-performance-test.js  monitor-luna-performance.ps1
performance-tray/: LunaPerformanceTray.cs  LunaPerformanceTray.csproj
privilege-broker/LunaBrokerService/: BrokerService.Designer.cs  BrokerService.cs  LunaBrokerService.csproj  Models.cs  NamedPipeServer.cs  Program.cs  SecurityValidator.cs  WindowsAPI.cs  app.manifest
privilege-broker/tests/: LunaBrokerService.Tests.csproj  SecurityValidationTests.cs
safety-tests/: DeviceSafetyTests.cs  HardwareSmokeTests.cs  LunaSafetyTests.csproj
src/: lib.rs  main.rs
src/ai/: clip.rs  florence.rs  mod.rs  model_manager.rs  pipeline.rs  sam.rs  trocr.rs
src/core/: config.rs  enhanced_patterns.rs  error.rs  events.rs  memory.rs  mod.rs  safety.rs
src/input/: mod.rs
src/overlay/: animations.rs  mod.rs  rendering.rs  visual_feedback.rs
src/utils/: logging.rs  metrics.rs  mod.rs  windows_api.rs
src/vision/: mod.rs  screen_capture.rs  text_recognition.rs  ui_detection.rs
src_refactored/overlay/: mod.rs  rendering.rs
src_refactored/utils/: geometry.rs  image_processing.rs  logging.rs
src_refactored/vision/: mod.rs  screen_capture.rs
tests/: integration.rs
(+39 files in other folders)
