[package]
name = "luna"
version = "0.1.0"
edition = "2021"
authors = ["William Victor <williamevictor@gmail.com>"]
description = "Computer-use agent prototype: screen analysis with hand-written computer vision and guarded input automation"
license = "MIT"
repository = "https://github.com/sushiionwest/LUNA"
readme = "README.md"
keywords = ["computer-vision", "automation", "agent"]
categories = ["computer-vision", "gui"]

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
# Image decoding/encoding at the boundaries; the CV algorithms are hand-written
image = { version = "0.24", features = ["png", "jpeg"], default-features = false }

# Configuration serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
log = "0.4"
env_logger = { version = "0.10", optional = true }

# Config file location
dirs = "5.0"

# Safety-layer pattern matching
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = "s"
strip = "symbols"

[features]
default = []
logging = ["env_logger"]
